[tool.poetry]
name = "starknet-dss"
version = "0.0.1"
description = "MCD on Starknet"
authors = ["MakerDAO"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pytest = ">=7.1.3"
pytest-asyncio = ">=0.19.0"
cairo-lang = "0.10.2"
dill = "0.3.4"
pytest-xdist = "2.4.0"
pytest-order = "^1.0.1"
cairo-nile = "0.11.0"
starknet-devnet = "0.4.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.3"
black = {version = "^21.9b0", allow-prereleases = true}
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
